[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/RockThrower.gd" type="Script" id=1]
[ext_resource path="res://res/sounds/shot.ogg" type="AudioStream" id=2]
[ext_resource path="res://Rock.tscn" type="PackedScene" id=3]

[node name="RockThrower" type="Sprite"]
scale = Vector2( 0.5, 0.5 )
centered = false
offset = Vector2( -15, -6 )
script = ExtResource( 1 )
damage = 2
fireRate = 300
knockbackMultiplier = 1
Bullet = ExtResource( 3 )

[node name="BarrelEnd" type="Position2D" parent="."]
position = Vector2( 40, 0 )

[node name="ShootSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 2 )
